# SpaceX-Insights

./: .gitignore  Dockerfile  Dockerfile.flow  Dockerfile.prefect  Dockerfile.web  README.md  docker-compose.yml  pyproject.toml
analysis/: app.py  starlink_orbit_estimator.ipynb
etl/: __init__.py
etl/etl/: baseetl.py  launchetl.py  launchpadetl.py  rocketetl.py  starlinketl.py
etl/flows/: etl_flow.py
etl/models/: launch.py  launchpad.py  rocket.py  starlink.py
etl/utils/: utils.py
