[project]
name = "SpaceX-Insights"
version = "0.1.0"
description = "Extracting data from the official SpaceX API and analyze the data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "prefect>=3.5.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
]
